Add profile meta exists endpoint
