# api/external/compliance/profiles/profiles.swagger.json
@@ -339,6 +339,15 @@
         }
       }
     },
+    "chef.automate.api.compliance.profiles.v1.Exists": {
+      "type": "object",
+      "properties": {
+        "exists": {
+          "type": "boolean",
+          "format": "boolean"
+        }
+      }
+    },
     "chef.automate.api.compliance.profiles.v1.Group": {
       "type": "object",
       "properties": {
